Refs #6376 -- Added support for custom gettext domains.

--- a/AUTHORS
+++ b/AUTHORS
@@ -757,6 +757,7 @@ answer newbie questions, and generally made Django that much better:
     Rozza <ross.lawley@gmail.com>
     Rudolph Froger <rfroger@estrate.nl>
     Rudy Mutter
+    Rui Pereira <r4g3baby@gmail.com>
     Rune Rønde Laursen <runerl@skjoldhoej.dk>
     Russell Cloran <russell@rucus.net>
     Russell Keith-Magee <russell@keith-magee.com>
