--- a/docs/topics/i18n/translation.txt
+++ b/docs/topics/i18n/translation.txt
@@ -2105,9 +2105,15 @@ message file specific to the project you are composing. The choice is yours.
 All message file repositories are structured the same way. They are:
 
 * All paths listed in :setting:`LOCALE_PATHS` in your settings file are
-  searched for ``<language>/LC_MESSAGES/django.(po|mo)``
-* ``$APPPATH/locale/<language>/LC_MESSAGES/django.(po|mo)``
-* ``$PYTHONPATH/django/conf/locale/<language>/LC_MESSAGES/django.(po|mo)``
+  searched for ``<language>/LC_MESSAGES/<domain>.(po|mo)``
+* ``$APPPATH/locale/<language>/LC_MESSAGES/<domain>.(po|mo)``
+* ``$PYTHONPATH/django/conf/locale/<language>/LC_MESSAGES/<domain>.(po|mo)``
+
+By default, these locations are searched for ``django.(po|mo)`` files.
+You can also customize translation file names to be searched by adding
+a ``(directory, domain)`` tuple to the :setting:`LOCALE_PATHS` setting.
+:setting:`LOCALE_PATHS` directories defined inside :setting:`INSTALLED_APPS`
+setting will always default to the ``django`` domain.
 
 To create message files, you use the :djadmin:`django-admin makemessages <makemessages>`
 tool. And you use :djadmin:`django-admin compilemessages <compilemessages>`
