[2.2.x] Fixed #30481 -- document force_text() can return non-text str
Not needed in Django 3.x because "force_text()" is deprecated there
in favor of "force_str()". This documentation clarifies "yes, we said
text but really we mean str"; that's not needed when the function says
"str" in the first place.

--- a/AUTHORS
+++ b/AUTHORS
@@ -14,6 +14,7 @@ answer newbie questions, and generally made Django that much better:
     Adam Allred <adam.w.allred@gmail.com>
     Adam Bogdał <adam@bogdal.pl>
     Adam Donaghy
+    Adam Hooper <adam@adamhooper.com>
     Adam Johnson <https://github.com/adamchainz>
     Adam Malinowski <https://adammalinowski.co.uk/>
     Adam Vandenberg
