--- a/docs/man/django-admin.1
+++ b/docs/man/django-admin.1
@@ -1,6 +1,6 @@
 .\" Man page generated from reStructuredText.
 .
-.TH "DJANGO-ADMIN" "1" "May 01, 2019" "2.2" "Django"
+.TH "DJANGO-ADMIN" "1" "July 01, 2019" "2.2" "Django"
 .SH NAME
 django-admin \- Utility script for the Django Web framework
 .
@@ -2600,7 +2600,7 @@ support the \fBstdout\fP and \fBstderr\fP options. For example, you could write:
 .sp
 .nf
 .ft C
-with open(\(aq/path/to/command_output\(aq) as f:
+with open(\(aq/path/to/command_output\(aq, \(aqw\(aq) as f:
     management.call_command(\(aqdumpdata\(aq, stdout=f)
 .ft P
 .fi
