If DATABASE_ROUTERS is defined Warn instead on db_table collision

--- a/AUTHORS
+++ b/AUTHORS
@@ -912,6 +912,7 @@ answer newbie questions, and generally made Django that much better:
     Zbigniew Siciarz <zbigniew@siciarz.net>
     zegor
     Zlatko Mašek <zlatko.masek@gmail.com>
+    Adnan Umer <u.adnan@outlook.com>
     <Please alphabetize new entries>
 
 A big THANK YOU goes to:
