author name added

--- a/AUTHORS
+++ b/AUTHORS
@@ -26,6 +26,7 @@ answer newbie questions, and generally made Django that much better:
     Ahmad Alhashemi <trans@ahmadh.com>
     Ahmad Al-Ibrahim
     Ahmed Eltawela <https://github.com/ahmedabt>
+    Ahsan Shafiq   <ahsanshafiq742@gmail.com>
     ajs <adi@sieker.info>
     Akash Agrawal <akashrocksha@gmail.com>
     Akis Kesoglou <akiskesoglou@gmail.com>
