Switch from TestCase to PostgreSQLTestCase and add Louise as an author.

--- a/AUTHORS
+++ b/AUTHORS
@@ -522,6 +522,7 @@ answer newbie questions, and generally made Django that much better:
     Lincoln Smith <lincoln.smith@anu.edu.au>
     Loek van Gent <loek@barakken.nl>
     Loïc Bistuer <loic.bistuer@sixmedia.com>
+    Louise Grandjonc <http://www.louisemeta.com/>
     Lowe Thiderman <lowe.thiderman@gmail.com>
     Luan Pablo <luanpab@gmail.com>
     Lucas Connors <https://www.revolutiontech.ca/>
@@ -854,7 +855,7 @@ answer newbie questions, and generally made Django that much better:
     Thomas Stromberg <tstromberg@google.com>
     Thomas Tanner <tanner@gmx.net>
     tibimicu@gmx.net
-    Tim Allen <tim@pyphilly.org>
+    Tim Allen <https://www.PyPhilly.org>
     Tim Givois <tim.givois.mendez@gmail.com>
     Tim Graham <timograham@gmail.com>
     Tim Heap <tim@timheap.me>
