--- a/AUTHORS
+++ b/AUTHORS
@@ -329,6 +329,7 @@ answer newbie questions, and generally made Django that much better:
     Guillaume Pannatier <guillaume.pannatier@gmail.com>
     Gustavo Picon
     hambaloney
+    Hannes Ljungberg <hannes.ljungberg@gmail.com>
     Hannes Struß <x@hannesstruss.de>
     Hasan Ramezani <hasan.r67@gmail.com>
     Hawkeye
