--- a/AUTHORS
+++ b/AUTHORS
@@ -772,7 +772,7 @@ answer newbie questions, and generally made Django that much better:
     Sergey Fedoseev <fedoseev.sergey@gmail.com>
     Sergey Kolosov <m17.admin@gmail.com>
     Seth Hill <sethrh@gmail.com>
-    Seth Thoburn <https://github.com/SethThoburn>
+    Seth Thoburn <https://seththoburn.com>
     Shai Berger <shai@platonix.com>
     Shannon -jj Behrens <https://www.jjinux.com/>
     Shawn Milochik <shawn@milochik.com>
