--- a/AUTHORS
+++ b/AUTHORS
@@ -152,6 +152,7 @@ answer newbie questions, and generally made Django that much better:
     Bryan Veloso <bryan@revyver.com>
     bthomas
     btoll@bestweb.net
+    Burhan Khalid <burhan.khalid@gmail.com>
     C8E
     Caio Ariede <caio.ariede@gmail.com>
     Calvin Spealman <ironfroggy@gmail.com>
