--- a/AUTHORS
+++ b/AUTHORS
@@ -859,6 +859,7 @@ answer newbie questions, and generally made Django that much better:
     Thomas Steinacher <http://www.eggdrop.ch/>
     Thomas Stromberg <tstromberg@google.com>
     Thomas Tanner <tanner@gmx.net>
+    Thomas Turner <tom@twt.me.uk>
     tibimicu@gmx.net
     Tim Allen <tim@pyphilly.org>
     Tim Givois <tim.givois.mendez@gmail.com>
