--- a/docs/topics/i18n/translation.txt
+++ b/docs/topics/i18n/translation.txt
@@ -291,7 +291,8 @@ customized with :setting:`LOCALE_ROOT`) is considered.
 
 To prevent inconsistencies and undesired results in translations, Django will
 not merge any catalog that contains a different plural form than the main one
-and will issue a warning about the conflicting catalog.
+and will issue a warning about the situation at a
+:ref:`system check level <translation-checks>` and at runtime.
 
 This conflict may arise mostly in two situations:
 
@@ -313,8 +314,8 @@ you may use
 to update your catalogs so they are aligned with the main plural form
 and avoid unexpected behavior.
 
-In the cases where you want to use custom plural forms, define the
-:setting:`LOCALE_ROOT` setting and use
+In the cases where you want to use custom plural forms, i.e. for using another
+implementation of the standard, define the :setting:`LOCALE_ROOT` setting and use
 :option:`django-admin makemessages --collect-base-catalogs<makemessages --collect-base-catalogs>`.
 This will merge all the locale catalogs bundled with Django into your
 :setting:`LOCALE_ROOT` and use them as main po files for translations.
@@ -322,7 +323,6 @@ This will merge all the locale catalogs bundled with Django into your
 .. versionchanged:: 3.1
 
     Handling plural forms as described above was added.
-
 
 .. _contextual-markers:
 
