--- a/AUTHORS
+++ b/AUTHORS
@@ -682,6 +682,7 @@ answer newbie questions, and generally made Django that much better:
     Olivier Sels <olivier.sels@gmail.com>
     Olivier Tabone <olivier.tabone@ripplemotion.fr>
     Orestis Markou <orestis@orestis.gr>
+    orlnub123 <orlnub123@gmail.com>
     Orne Brocaar <http://brocaar.com/>
     Oscar Ramirez <tuxskar@gmail.com>
     Ossama M. Khayat <okhayat@yahoo.com>
