--- a/docs/topics/i18n/translation.txt
+++ b/docs/topics/i18n/translation.txt
@@ -317,7 +317,7 @@ Customization of the plural forms for a language is done via the
 Once the setting is defined, Django will use the files under this directory as
 the main Django po files for translations.
 
-You may use :option:`django-admin makemessages --collect-base-catalogs<makemessages --collect-base-catalogs>`
+You may use :option:`django-admin makemessages --collect-bundled<makemessages --collect-bundled>`
 for collecting the bundled ones with Django and then customize them.
 
 .. versionchanged:: 3.1
