--- a/docs/topics/i18n/translation.txt
+++ b/docs/topics/i18n/translation.txt
@@ -307,7 +307,7 @@ standard may have changed or a bug has been fixed in the release.
 
 For aligning with the new version of the standard (or addressing the bug),
 you may use
-:option:`django-admin makemessages --comply-plural-forms<makemessages --comply-plural-forms>`
+:option:`django-admin makemessages --update-plural-forms<makemessages --update-plural-forms>`
 to update your message files so they are aligned with the main plural forms
 and avoid unexpected behavior.
 
