--- a/tests/i18n/commands/app_with_locale/locale/sk_XX/LC_MESSAGES/django.po
+++ b/tests/i18n/commands/app_with_locale/locale/sk_XX/LC_MESSAGES/django.po
@@ -8,7 +8,7 @@ msgid ""
 msgstr ""
 "Project-Id-Version: PACKAGE VERSION\n"
 "Report-Msgid-Bugs-To: \n"
-"POT-Creation-Date: 2013-03-30 12:51+0000\n"
+"POT-Creation-Date: 2020-01-03 05:13+0000\n"
 "PO-Revision-Date: YEAR-MO-DA HO:MI+ZONE\n"
 "Last-Translator: FULL NAME <EMAIL@ADDRESS>\n"
 "Language-Team: LANGUAGE <LL@li.org>\n"
@@ -16,14 +16,4 @@ msgstr ""
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
 "Content-Transfer-Encoding: 8bit\n"
-"Plural-Forms: nplurals=4; plural=(n%10==1 && n%100!=11 ? 0 : n%10>=2 && n"
-"%10<=4 && (n%100<12 || n%100>14) ? 1 : n%10==0 || (n%10>=5 && n%10<=9) || (n"
-"%100>=11 && n%100<=14)? 2 : 3);\n"
-
-#
-msgid "Lenin"
-msgstr "Ленин"
-
-#, fuzzy
-msgid "Vodka"
-msgstr "Водка"
+"Plural-Forms: nplurals=INTEGER; plural=EXPRESSION;\n"
