Fix i18n for Russian and other languages

--- a/django/contrib/admin/locale/af/LC_MESSAGES/django.po
+++ b/django/contrib/admin/locale/af/LC_MESSAGES/django.po
@@ -430,7 +430,7 @@ msgstr ""
 msgid "Objects"
 msgstr "Objekte"
 
-msgid "Yes, I'm sure"
+msgid "Yes, I’m sure"
 msgstr "Ja, ek is seker"
 
 msgid "No, take me back"
