--- a/django/contrib/admin/locale/ar/LC_MESSAGES/django.po
+++ b/django/contrib/admin/locale/ar/LC_MESSAGES/django.po
@@ -428,7 +428,7 @@ msgstr ""
 msgid "Objects"
 msgstr "عناصر"
 
-msgid "Yes, I'm sure"
+msgid "Yes, I’m sure"
 msgstr "نعم، أنا متأكد"
 
 msgid "No, take me back"
