--- a/django/contrib/admin/locale/bs/LC_MESSAGES/django.po
+++ b/django/contrib/admin/locale/bs/LC_MESSAGES/django.po
@@ -399,7 +399,7 @@ msgstr ""
 msgid "Objects"
 msgstr ""
 
-msgid "Yes, I'm sure"
+msgid "Yes, I’m sure"
 msgstr "Da, siguran sam"
 
 msgid "No, take me back"
