--- a/django/contrib/admin/locale/he/LC_MESSAGES/django.po
+++ b/django/contrib/admin/locale/he/LC_MESSAGES/django.po
@@ -421,7 +421,7 @@ msgstr ""
 msgid "Objects"
 msgstr "אובייקטים"
 
-msgid "Yes, I'm sure"
+msgid "Yes, I’m sure"
 msgstr "כן, אני בטוח/ה"
 
 msgid "No, take me back"
