--- a/django/contrib/admin/locale/km/LC_MESSAGES/django.po
+++ b/django/contrib/admin/locale/km/LC_MESSAGES/django.po
@@ -387,7 +387,7 @@ msgstr ""
 msgid "Objects"
 msgstr ""
 
-msgid "Yes, I'm sure"
+msgid "Yes, I’m sure"
 msgstr "ខ្ញុំច្បាស់​ជាចង់លប់"
 
 msgid "No, take me back"
