--- a/django/contrib/admin/locale/pt/LC_MESSAGES/django.po
+++ b/django/contrib/admin/locale/pt/LC_MESSAGES/django.po
@@ -436,7 +436,7 @@ msgstr ""
 msgid "Objects"
 msgstr "Objectos"
 
-msgid "Yes, I'm sure"
+msgid "Yes, I’m sure"
 msgstr "Sim, tenho a certeza"
 
 msgid "No, take me back"
