--- a/django/contrib/admin/locale/sl/LC_MESSAGES/django.po
+++ b/django/contrib/admin/locale/sl/LC_MESSAGES/django.po
@@ -415,7 +415,7 @@ msgstr ""
 msgid "Objects"
 msgstr "Objekti"
 
-msgid "Yes, I'm sure"
+msgid "Yes, I’m sure"
 msgstr "Ja, prepričan sem"
 
 msgid "No, take me back"
