--- a/django/contrib/admin/locale/uk/LC_MESSAGES/django.po
+++ b/django/contrib/admin/locale/uk/LC_MESSAGES/django.po
@@ -443,7 +443,7 @@ msgstr ""
 msgid "Objects"
 msgstr "Об'єкти"
 
-msgid "Yes, I'm sure"
+msgid "Yes, I’m sure"
 msgstr "Так, я впевнений"
 
 msgid "No, take me back"
