--- a/django/contrib/admin/locale/ur/LC_MESSAGES/django.po
+++ b/django/contrib/admin/locale/ur/LC_MESSAGES/django.po
@@ -395,7 +395,7 @@ msgstr ""
 msgid "Objects"
 msgstr ""
 
-msgid "Yes, I'm sure"
+msgid "Yes, I’m sure"
 msgstr "ھاں، مجھے یقین ھے"
 
 msgid "No, take me back"
