--- a/django/contrib/admin/locale/bn/LC_MESSAGES/django.po
+++ b/django/contrib/admin/locale/bn/LC_MESSAGES/django.po
@@ -393,7 +393,7 @@ msgstr ""
 msgid "Objects"
 msgstr ""
 
-msgid "Yes, I'm sure"
+msgid "Yes, I’m sure"
 msgstr "হ্যা়ঁ, আমি নিশ্চিত"
 
 msgid "No, take me back"
