--- a/django/contrib/admin/locale/br/LC_MESSAGES/django.po
+++ b/django/contrib/admin/locale/br/LC_MESSAGES/django.po
@@ -411,7 +411,7 @@ msgstr ""
 msgid "Objects"
 msgstr ""
 
-msgid "Yes, I'm sure"
+msgid "Yes, I’m sure"
 msgstr "Ya, sur on"
 
 msgid "No, take me back"
