--- a/django/contrib/admin/locale/es/LC_MESSAGES/django.po
+++ b/django/contrib/admin/locale/es/LC_MESSAGES/django.po
@@ -447,7 +447,7 @@ msgstr ""
 msgid "Objects"
 msgstr "Objetos"
 
-msgid "Yes, I'm sure"
+msgid "Yes, I’m sure"
 msgstr "Sí, estoy seguro"
 
 msgid "No, take me back"
