--- a/django/contrib/admin/locale/es_MX/LC_MESSAGES/django.po
+++ b/django/contrib/admin/locale/es_MX/LC_MESSAGES/django.po
@@ -408,7 +408,7 @@ msgstr ""
 msgid "Objects"
 msgstr ""
 
-msgid "Yes, I'm sure"
+msgid "Yes, I’m sure"
 msgstr "Sí, estoy seguro"
 
 msgid "No, take me back"
