--- a/django/contrib/admin/locale/ia/LC_MESSAGES/django.po
+++ b/django/contrib/admin/locale/ia/LC_MESSAGES/django.po
@@ -397,7 +397,7 @@ msgstr ""
 msgid "Objects"
 msgstr ""
 
-msgid "Yes, I'm sure"
+msgid "Yes, I’m sure"
 msgstr "Si, io es secur"
 
 msgid "No, take me back"
