--- a/django/contrib/admin/locale/te/LC_MESSAGES/django.po
+++ b/django/contrib/admin/locale/te/LC_MESSAGES/django.po
@@ -389,7 +389,7 @@ msgstr ""
 msgid "Objects"
 msgstr ""
 
-msgid "Yes, I'm sure"
+msgid "Yes, I’m sure"
 msgstr "అవును "
 
 msgid "No, take me back"
