--- a/django/contrib/admin/locale/zh_Hant/LC_MESSAGES/django.po
+++ b/django/contrib/admin/locale/zh_Hant/LC_MESSAGES/django.po
@@ -400,7 +400,7 @@ msgstr ""
 msgid "Objects"
 msgstr "物件"
 
-msgid "Yes, I'm sure"
+msgid "Yes, I’m sure"
 msgstr "是的，我確定"
 
 msgid "No, take me back"
