--- a/docs/topics/i18n/translation.txt
+++ b/docs/topics/i18n/translation.txt
@@ -553,7 +553,7 @@ Similar access to this information is available for template code. See below.
 Internationalization: in template code
 ======================================
 
-.. highlightlang:: html+django
+.. highlight:: html+django
 
 Translations in :doc:`Django templates </ref/templates/language>` uses two template
 tags and a slightly different syntax than in Python code. To give your template
@@ -954,7 +954,7 @@ There are also simple filters available for convenience:
 Internationalization: in JavaScript code
 ========================================
 
-.. highlightlang:: python
+.. highlight:: python
 
 Adding translations to JavaScript poses some problems:
 
@@ -1041,7 +1041,7 @@ precedence.
 Using the JavaScript translation catalog
 ----------------------------------------
 
-.. highlightlang:: javascript
+.. highlight:: javascript
 
 To use the catalog, just pull in the dynamically generated script like this:
 
@@ -1824,7 +1824,7 @@ redirected in the ``redirect_to`` context variable.
 Explicitly setting the active language
 --------------------------------------
 
-.. highlightlang:: python
+.. highlight:: python
 
 You may want to set the active language for the current session explicitly. Perhaps
 a user's language preference is retrieved from another system, for example.
