Fixed #31436 - Added support for named placeholders in format_html_join.

--- a/AUTHORS
+++ b/AUTHORS
@@ -805,6 +805,7 @@ answer newbie questions, and generally made Django that much better:
     Sean Brant
     Sebastian Hillig <sebastian.hillig@gmail.com>
     Sebastian Spiegel <https://www.tivix.com/>
+    Sébastien Corbin <seb.corbin@gmail.com>
     Segyo Myung <myungsekyo@gmail.com>
     Selwin Ong <selwin@ui.co.id>
     Sengtha Chay <sengtha@e-khmer.com>
