--- a/docs/man/django-admin.1
+++ b/docs/man/django-admin.1
@@ -1,6 +1,6 @@
 .\" Man page generated from reStructuredText.
 .
-.TH "DJANGO-ADMIN" "1" "November 18, 2019" "3.0" "Django"
+.TH "DJANGO-ADMIN" "1" "May 04, 2020" "3.0" "Django"
 .SH NAME
 django-admin \- Utility script for the Django Web framework
 .
@@ -325,7 +325,7 @@ Specifies the database onto which to open a shell. Defaults to \fBdefault\fP\&.
 \fBNOTE:\fP
 .INDENT 0.0
 .INDENT 3.5
-Be aware that not all options set it in the \fBOPTIONS\fP part of your
+Be aware that not all options set in the \fBOPTIONS\fP part of your
 database configuration in \fBDATABASES\fP are passed to the
 command\-line client, e.g. \fB\(aqisolation_level\(aq\fP\&.
 .UNINDENT
@@ -1246,7 +1246,7 @@ by setting the \fBDJANGO_WATCHMAN_TIMEOUT\fP environment variable.
 .UNINDENT
 .UNINDENT
 .sp
-Watchman support replaced support for \fIpyinotify\fP\&.
+Watchman support replaced support for \fBpyinotify\fP\&.
 
 .sp
 When you start the server, and each time you change Python code while the
