Normalized spelling of "system-wide" in docs.

--- a/docs/topics/install.txt
+++ b/docs/topics/install.txt
@@ -139,7 +139,7 @@ This is the recommended way to install Django.
 
 #. Take a look at virtualenv_ and virtualenvwrapper_. These tools provide
    isolated Python environments, which are more practical than installing
-   packages systemwide. They also allow installing packages without
+   packages system-wide. They also allow installing packages without
    administrator privileges. The :doc:`contributing tutorial
    </intro/contributing>` walks through how to create a virtualenv.
 
