Fix typo for the translation of the word 'individual' in greek

--- a/django/contrib/admin/locale/el/LC_MESSAGES/djangojs.po
+++ b/django/contrib/admin/locale/el/LC_MESSAGES/djangojs.po
@@ -93,7 +93,7 @@ msgid ""
 "action."
 msgstr ""
 "Έχετε επιλέξει μια ενέργεια, αλλά δεν έχετε αποθηκεύσει τις αλλαγές στα "
-"εκάστωτε πεδία ακόμα. Παρακαλώ πατήστε ΟΚ για να τις αποθηκεύσετε. Θα "
+"εκάστοτε πεδία ακόμα. Παρακαλώ πατήστε ΟΚ για να τις αποθηκεύσετε. Θα "
 "χρειαστεί να εκτελέσετε ξανά την ενέργεια."
 
 msgid ""
